css/details.css
table {
	display: inline-block;
	width: 48%;
}

caption {
	font-weight: bold;
	border-bottom: 1px solid #C3C3C3;
	margin-left: 30%;
	margin-bottom: 1em;
	font-size: 115%;
}

th {
	text-align: right;
}

td {
	text-align: right;
}

summary {
	cursor: pointer;
	user-select: none;
}

tr.imprecise {
	font-style: italic;
}

tr.imprecise td {
	position: relative;
}

/* Question mark circle icon */
tr.imprecise td::after {
	content: '?';
	position: absolute;
	top: .65em;
	right: -2.3em;
	width: 1.2em;
	height: 1.2em;
	border-radius: 1em;
	border: 1px solid #333;
	font-size: 90%;
	font-style: normal;
	line-height: 1.2em;
	font-weight: bold;
	text-align: center;
}

